# CACS305

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
cmake/: DisallowInSourceBuilds.cmake
examples/: Bresenham.cpp  CMakeLists.txt  Circle.cpp  DDA.cpp  FloodFill4way.cpp  FractalCanopy.cpp  Mandelbrot.cpp  RandomNoise.cpp  SierpinskiTriangle.cpp  SimpleCircle.cpp
include/cacs305/: image.hpp  utilities.hpp
include/cacs305/math/: core.hpp
src/: CMakeLists.txt  image.cpp
